# obfstr

./: .gitignore  Cargo.toml  build.rs  license.txt  readme.md  rustfmt.toml
.github/workflows/: ci.yml  gate.yml
docs/: index.html
examples/: obfuscation.rs  stringify.rs
impl/: Cargo.toml  readme.md
impl/src/: lib.rs
src/: bytes.rs  cfo.rs  lib.rs  murmur3.rs  pos.rs  wide.rs  words.rs  xref.rs
tests/: main.rs  xref.rs
