[package]
name = "obfstr"
version = "0.2.6"
edition = "2018"
license = "MIT"

authors = ["Casper <CasualX@users.noreply.github.com>"]
description = "Compiletime string constant obfuscation for Rust"
documentation = "https://docs.rs/obfstr"
repository = "https://github.com/CasualX/obfstr"
readme = "readme.md"
keywords = ["obfuscation", "hash", "random", "wide"]
categories = ["no-std"]

[features]
unsafe_static_str = []
