[package]
name = "obfstr"
version = "0.4.3"
edition = "2021"
license = "MIT"

authors = ["Casper <CasualX@users.noreply.github.com>"]
description = "Compiletime string constant obfuscation for Rust"
documentation = "https://docs.rs/obfstr"
repository = "https://github.com/CasualX/obfstr"
readme = "readme.md"
keywords = ["obfuscation", "hash", "random", "wide"]
categories = ["no-std"]
