[package]
name = "obfstr-impl"
version = "0.1.1"
edition = "2018"
authors = ["Casper <CasualX@users.noreply.github.com>"]
license = "MIT"
description = "Procedural macro implementation for obfstr"
repository = "https://github.com/CasualX/obfstr"

[dependencies.rand]
version = "0.6"
optional = true

[lib]
proc-macro = true
